# WiiMusicEditorPlus

./: .gitignore  CHANGELOG.md  Confirm.ui  ErrorBox.ui  FirstSetup.ui  GameDocumentation.ui  HelpMenu.ui  ImportChanges.ui  LICENSE  PackRom.ui  README.md  RevertChanges.ui  Riivolution.ui  Settings.ui  Success.ui  Update.ui  Warning.ui  WiiMusicEditorPlus.py  WiiMusicEditorPlus.spec  WiiMusicPlus.ui  WiiMusicPlus_ui.py  app.py  build-linux.sh  build-mac - Copy.command  build-mac.command  build-mac.sh  build-windows.bat  confirm_ui.py  convert update.bat  convert-confirm.bat  convert-errorbox.bat  convert-firstsetup.bat  convert-importchanges.bat  convert-mainwindow.bat  convert-monoframework.bat  convert-packrom.bat  convert-resource.bat  convert-revert.bat  convert-riivolution.bat  convert-settings.bat  (+44 more)
.github/: FUNDING.yml
.github/workflows/: build-app.yaml  build-app.yml  build_wheels.yaml  build_wheels.yml
Cross-Platform OS Helpers/Linux/: packages.txt
Cross-Platform OS Helpers/Windows/: packages.txt
Helper/Extra/: popen.bat
Helper/Update/: Update.bat
Icon/: icon.icns
Update/: Linux.sh  Mac.sh  Windows.bat
crossplatformhelpers/: Version.txt  compile gotasequence.txt
crossplatformhelpers/Mac/: Packages.txt
icon/: icon.icns
include/linux/wiimms/: wbmgt  wstrt
include/mac/update/: update.sh
include/mac/wiimms/: wbmgt  wstrt
include/windows/update/: update.bat
scripts/: build.py  convert_ui.py
src/: app.py  resources_rc.py
src/wii_music_editor/data/: region.py
src/wii_music_editor/editor/: brsar.py  message.py
src/wii_music_editor/services/: discord.py
src/wii_music_editor/ui/: confirm.py  (+4 more)
styles/: default.qss
templates/: confirm.ui  error_handler.ui  first_setup.ui  main_window.ui  pack_rom.ui  riivolution.ui  success.ui  update.ui  warning.ui
translations/: en.ts  fr.ts  ge.ts  it.ts  jp.ts  kr.ts  manual-fr.txt  manual-ge.txt  manual-it.txt  manual-jp.txt  manual-kr.txt  manual-sp.txt  sp.ts  translations-en.txt  translations-fr.txt  translations-ge.txt  translations-it.txt  translations-jp.txt  translations-kr.txt  translations-sp.txt
translations/translations/: fr.qm  ge.qm  it.qm  jp.qm  kr.qm  sp.qm
ui/: main_window.ui  pack_rom.ui  riivolution.ui
ui_templates/: first_setup.ui  main_window.ui  revert_changes.ui  riivolution.ui  settings.ui  update.ui  warning.ui
utils/: build.py
wii_music_editor/: __init__.py  __main__.py  version.py
wii_music_editor/data/: instruments.py  region.py  songs.py  sounds.py  styles.py
wii_music_editor/editor/: _brsar.py  brsar.py  default_styles.txt  dol.py  editor.py  gecko.py  loaded_file.py  message.py  midi.py  openData.py  reset.py  rom.py  rom_folder.py  styles.txt  wav.py
wii_music_editor/res/: resources.qrc
wii_music_editor/services/: discord.py  external_editor.py  song_downloader.py  update.py
wii_music_editor/ui/: confirm.py  error_handler.py  first_setup.py  import_changes.py  main_window.py  pack_rom.py  revert_changes.py  riivolution.py  settings.py  success.py  update.py  warning.py
wii_music_editor/utils/: checksum.py  dolphin.py  editor.py  osUtils.py  pathUtils.py  paths.py  preferences.py  region.py  save.py  shell.py  translate.py  update.py
(+84 files in other folders)
