[project]
name = "wii_music_editor"
version = "2.0.0.dev2"
description = "The Ultimate Wii Music modding tool"
authors = [
    { name = "Benjamin Halko" },
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "mido",
    "pretty-midi",
    "psutil",
    "pypresence",
    "pyside6",
    "requests"
]

[project.scripts]
wii-music-editor = "wii_music_editor:main"

[project.urls]
homepage = "https://github.com/BenjaminHalko/WiiMusicEditorPlus"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
wii_music_editor = "wii_music_editor"

[tool.cibuildwheel]
skip = ["*-musllinux*", "pp*", "*-win_amd64"]
repair-wheel-command = ""

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
