[project]
name = "wii_music_editor"
version = "2.0.0-dev.7"
description = "The ultimate Wii Music modding tool"
authors = [
    { name = "Benjamin Halko" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9,<3.13"

[project.scripts]
wii-music-editor = "wii_music_editor:main"

[project.urls]
Homepage = "https://github.com/BenjaminHalko/WiiMusicEditorPlus"
Discord = "https://discord.gg/NC3wYAeCDs"
Changelog = "https://github.com/BenjaminHalko/WiiMusicEditorPlus/blob/dev/CHANGELOG.md"
Wiki = "https://github.com/BenjaminHalko/WiiMusicEditorPlus/wiki"

[build-system]
requires = ["setuptools>=61.0", "pyshortcuts>=1.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
wii_music_editor = "wii_music_editor"

[tool.cibuildwheel]
skip = ["*-musllinux*", "pp*", "*-win32"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.dev]
match = "dev"
prerelease = true
prerelease_token = "dev"

[semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.changelog]
exclude_commit_patterns = ["^(?!\\w+:)"]
